# otus_homework

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  conanfile.txt
src/otus_homework/: CMakeLists.txt
src/otus_homework/include/otus_homework/: blocking_queue.hpp  command_executor.hpp  globals.hpp  movement_vector.hpp  otus_homework_api.hpp
src/otus_homework/include/otus_homework/adapters/: fuel_burnable_adapter.hpp  fuel_checkable_adapter.hpp  movable_adapter.hpp  rotatable_adapter.hpp  velocity_changable_adapter.hpp
src/otus_homework/include/otus_homework/commands/: burn_fuel_command.hpp  change_velocity_command.hpp  check_fuel_command.hpp  hard_stop_command.hpp  initialize_tank_command.hpp  ioc_checkout_scope_command.hpp  ioc_new_scope_command.hpp  ioc_register_command.hpp  ioc_unregister_command.hpp  macro_command.hpp  move_command.hpp  move_to_command.hpp  rotate_command.hpp  run_command.hpp  setup_tank_direction_command.hpp  setup_tank_owner_command.hpp  setup_tank_position_command.hpp  soft_stop_command.hpp
src/otus_homework/include/otus_homework/interfaces/: i_command.hpp  i_fuel_burnable.hpp  i_fuel_checkable.hpp  i_movable.hpp  i_rotatable.hpp  i_state.hpp  i_uobject.hpp  i_velocity_changable.hpp
src/otus_homework/include/otus_homework/states/: move_to_state.hpp  soft_stop_state.hpp  usual_state.hpp
src/otus_homework/include/otus_homework/utils/: ioc_container.hpp  ioc_storage.hpp
src/otus_homework/src/: command_executor.cpp  globals.cpp  movement_vector.cpp
src/otus_homework/src/adapters/: fuel_burnable_adapter.cpp  fuel_checkable_adapter.cpp  movable_adapter.cpp  rotatable_adapter.cpp  velocity_changable_adapter.cpp
src/otus_homework/src/commands/: burn_fuel_command.cpp  change_velocity_command.cpp  check_fuel_command.cpp  hard_stop_command.cpp  initialize_tank_command.cpp  ioc_checkout_scope_command.cpp  ioc_new_scope_command.cpp  ioc_register_command.cpp  ioc_unregister_command.cpp  macro_command.cpp  move_command.cpp  move_to_command.cpp  rotate_command.cpp  run_command.cpp  setup_tank_direction_command.cpp  setup_tank_owner_command.cpp  setup_tank_position_command.cpp  soft_stop_command.cpp
src/otus_homework/src/states/: move_to_state.cpp  soft_stop_state.cpp  usual_state.cpp
src/otus_homework/src/utils/: ioc_container.cpp  ioc_storage.cpp
src/otus_homework_tests/: CMakeLists.txt
src/otus_homework_tests/src/: common_test_functions.cpp  main.cpp  month1_lesson3_homework_tests.cpp  month1_lesson4_homework_tests.cpp  month3_lesson12_homework_tests.cpp  month3_lesson14_homework_tests.cpp  month3_lesson15_homework_tests.cpp  month3_lesson23_homework_tests.cpp  month3_lesson27_homework_tests.cpp
src/otus_homework_tests/src/include/: common_test_functions.hpp
utils/: CMakeLists.txt  main.cpp
